Fix width issues with list views and forms on mobile (fixes #14). Also, don't allow viewport scaling on the iPhone, because it makes the sign in form reveal really confusing.

--- a/app/stylesheets/basic_mobile.sass
+++ b/app/stylesheets/basic_mobile.sass
@@ -39,6 +39,10 @@ h6
 h5, h6
   text-transform: uppercase
 
+form.formtastic
+  input, textarea
+    width: 95%
+
 a.external
   @extend .external_link
   color: #fff
@@ -324,7 +328,6 @@ body.events #content
     li
       margin: 0
       position: relative
-      width: 90%
       border-bottom: 1px solid darken($background_color, 30)
       padding: .8em .8em .8em 75px
       min-height: 52px
