--- a/app/stylesheets/desktop.sass
+++ b/app/stylesheets/desktop.sass
@@ -8,6 +8,10 @@
 @import transitions
 @import border_radius
 
+form.formtastic
+  input, textarea
+    width: auto
+
 .desktop-only
   display: inline
 div.desktop-only
